error_mancer/tests/ui/not_fn.stderr
error: Expected function or impl block
 --> tests/ui/not_fn.rs:4:1
  |
4 | struct NotAFunction;
  | ^^^^^^^^^^^^^^^^^^^^
