error_mancer/tests/ui/not_fn.rs
use error_mancer::prelude::*;

#[errors]
struct NotAFunction;

fn main() {}
